@@ -16,6 +16,8 @@
   * use yy_size_t for parser alloc definitions, fixes build errors on 64bit
     architectures
     Changed files: wc/parser/htmllex.l
+  * Improve error message for failing htmlsax module import
+    Changed files: linkcheck/parser/htmllib.py
 
 1.5
   * - increase TCP dns query timeout from 10 to 20 seconds
